# gemma4

./: .gitignore  README.md  plan-jolly-squishing-rivest.md
.claude/: settings.json
apps/dashboard/: journey.html
apps/demo-app/: deployment.yaml  server.py
apps/demo-app-rs/: Cargo.toml  Dockerfile  deployment.yaml
apps/demo-app-rs/src/: case.rs  config.rs  dashboard.rs  diff.rs  eicr.rs  entities.rs  extraction.rs  fhir.rs  flight.rs  hl7.rs  hl7_output.rs  ingest.rs  jurisdiction.rs  llm.rs  main.rs  store.rs
apps/demo-app-rs/static/: index.html
apps/llama-server/: Dockerfile.jetson  POWER_MODE.md  SPEC_DECODE_LOG.md  SPEC_DECODE_RESULTS.md  append-log-row.py  build-job.yaml  deployment-spec.yaml  deployment.yaml  nvpmodel-daemonset.yaml  nvpmodel-job.yaml  quick-bench.py  run-sweep.sh  spec-capture-accept.sh  spec-configs.json  spec-decode-runner.sh
apps/mlc-llm/: BASELINE.md  RUNBOOK.md  apply-and-build.sh  apply-patches.py  benchmark-gemma3.sh  build-gemma4.sh  build-tvm-local.sh  compile-cross-inner.sh  compile-cross.sh  compile-model-cross-inner.sh  compile-model-cross.sh  compile-model-inner.sh  compile-model.sh  convert-weights-inner.sh  convert-weights.sh  deploy-merged-model.sh  deploy-to-jetson.sh  do-compile.sh  generate-configs.py  inference-test.py  merge-lora-to-hf.py  mlc-pr3485.patch  relax-pr346.patch  serve-on-jetson.sh  setup-gemma4.sh  test-patches.py  test-pod.yaml  test-serve.sh
apps/mobile/: FEASIBILITY.md  FORK_PLAN.md  RECOMMENDATION.md  SKETCH.md
apps/mobile/convert/: .gitignore  README.md  REGEN.md  VALIDATION.md  VALIDATION_AFTER_TEMPLATE_FIX.md  agent_litertlm.py  agent_pipeline.py  bench_fastpath_threshold.py  bench_grammar.py  bench_multi_temp.py  bench_self_consistency.py  bench_system_prompt.py  bench_toolcall_grammar.py  bench_v62_singleshot.py  case_diff.py  cliniq_extraction.gbnf  cliniq_toolcall.gbnf  cliniq_v62_compact.gbnf  fhir_bundle.py  gguf_lora_to_peft.py  hybrid_pipeline.py  inspect_lora_gguf.py  lookup_table.json  merge_and_convert.py  perf_covid_3x.py  pyproject.toml  rag_search.py  regex_preparser.py  reportable_conditions.json  score_fhir.py  validate_all_cases.py  validate_fast_path.py  validate_litertlm.py
apps/mobile/litertlm-swift/scripts/bazel_overlay/: BUILD.bazel
apps/ollama/: Dockerfile.jetson  Modelfile  argocd-app.yaml  deployment.yaml  kustomization.yaml  model-loader-job.yaml  namespace.yaml  service.yaml
apps/training/: DIAGNOSIS.md  Dockerfile.jetson  RETRAIN_V2.md  diagnose_lora.py  diagnose_lora_output.json  train-compact-job.yaml  train.py  training-job.yaml
apps/trtllm/: FEASIBILITY.md
data/: train-compact.jsonl  val-compact.jsonl
data/eicr-samples/: sample_eicr_01.xml
data/fhir-samples/: sample_fhir_01.json
demo-video/: README.md
docs/experiments/: README.md  _template.md  c1-jetson-orin-nx-7w.md  c12-llama-cpp-ios-sim.md  c14-litertlm-ios-sim.md  c16-litertlm-macos-cpu.md  (+16 more)
kaggle/: cliniq_inference_kernel.json  cliniq_inference_server.py  kernel-metadata.json
kaggle-tool-trace-training/: kernel-metadata.json  train-tool-trace.py
kaggle-training/: kernel-metadata.json  train-compact.py
models/: NAS_OFFLOAD.md
notebooks/: gemma4_eicr_fhir_finetune.ipynb  gemma4_eicr_fhir_finetune.py  kernel-metadata.json
sandbox/: dashboard.html
scripts/: aggregate_benchmark_evidence.py  analyze_c2.py  benchmark.py  build_gold_tool_trace_sft.py  build_heldout_corpus.py  build_llm_required_corpus.py  demo.config  distill_agent_traces.py  experiments-c2.yaml  experiments.yaml  generate_say_narration.sh  generate_training_data.py  generate_tts_narration.py  interpret_device_perf.py  merge_lora_to_gguf.py  mux_demo_video.sh  optimize.py  parallel2_concurrent_test.py  publish_benchmarks.py  record-demo.mjs  record_ios_demo.sh  report.py  requirements.txt  run_c2_sweep.sh  run_c2_sweep2.sh  run_det_external.py  summarize_eval_corpus.py  sweep-c2-results.md  sweep-results-auto.md  sweep-results.md  sync_experiment_notes.py  test_cases.jsonl  test_cases_adversarial.jsonl  test_cases_adversarial2.jsonl  test_cases_adversarial3.jsonl  test_cases_adversarial4.jsonl  test_cases_adversarial5.jsonl  test_cases_adversarial6.jsonl  test_cases_adversarial7.jsonl  test_cases_adversarial8.jsonl  (+9 more)
spaces/: .gitignore  README.md  app.py  build.sh  deploy.sh  requirements-mtp.txt  requirements-remote.txt  requirements.txt  zerogpu_engine.py  zerogpu_engine_mtp.py  zerogpu_engine_remote.py
(+181 files in other folders)
