[package]
name = "cliniq"
version = "0.2.0"
edition = "2021"
description = "ClinIQ: Clinical Intelligence Surveillance Platform — DuckDB + Arrow Flight on Jetson"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
duckdb = { version = "1.1", features = ["bundled"] }
arrow = "53"
arrow-flight = "53"
tonic = "0.12"
prost = "0.13"
quick-xml = { version = "0.36", features = ["serialize"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
async-trait = "0.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true
